kubernetes/infra/infra-stack/postgres01.deploy.yaml
# Deployment for the PostgreSQL instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres01
  labels:
    app: postgres01
spec:
  replicas: 1 # Number of pod replicas
  selector:
    matchLabels:
      app: postgres01
  template:
    metadata:
      labels:
        app: postgres01
    spec:
      containers:
        - name: postgres01
          image: postgres:17.0-alpine3.20 # PostgreSQL container image
          ports:
            - containerPort: 5432 # Container port to expose
          volumeMounts:
            - name: postgres01-volume
              mountPath: /var/lib/postgresql/data # Path in the container where data will be stored
          resources:
            requests:
              cpu: "3" # Requested CPU for the container
              memory: "5Gi" # Requested memory for the container
            limits:
              cpu: "4" # Limit of CPU for the container
              memory: "8Gi" # Limit of memory for the container
          securityContext:
            runAsUser: 70 # The defaul 'postgres' user UID
            runAsGroup: 70 # The defaul 'postgres' user GID
          # command: [ "postgres" ]
          # args:
          #   - "-c"
          #   - "max_connections=200"
          #   - "-c"
          #   - "log_min_duration_statement=50"
          #   - "-c"
          #   - "logging_collector=on"
          #   - "-c"
          #   - "log_directory=log"
          #   - "-c"
          #   - "log_filename=postgresql-%Y-%m-%d.log"
      volumes:
        - name: postgres01-volume
          persistentVolumeClaim:
            claimName: postgres01-pvc # Claim the PVC for the deployment
      restartPolicy: Always
