kubernetes/infra/infra-stack/transaction-service.deploy.yaml
# Deployment for the PostgreSQL instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  replicas: 2 # Number of pod replicas
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: tunvx/simple-bank-transaction-service:v0.0.1 # Dockerhub container image
          ports:
            - containerPort: 8080 # Container port HTTP to expose
            - containerPort: 8090 # Container port GRPC to expose
          volumeMounts:
            - name: transaction-service-log
              mountPath: /var/log # Log files volume mount
          command:
            [
              "/app/wait-for.sh",
              "redis:6379",
              "postgres01:5432",
              "--",
              "/app/start.sh",
            ]
          args: ["/app/main"] # Command to execute the main application
          resources:
            requests:
              cpu: "0.5" # Requested CPU for the container
              memory: "256Mi" # Requested memory for the container
            limits:
              cpu: "0.5" # Limit of CPU for the container
              memory: "256Mi" # Limit of memory for the container
      volumes:
        - name: transaction-service-log
          persistentVolumeClaim:
            claimName: transaction-service-pvc # Claim the PVC for the deployment
      restartPolicy: Always
